[package]
name = "fen2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
resvg = "0.38"
usvg = "0.38"
tiny-skia = "0.11"
printpdf = { version = "0.7", features = ["embedded_images"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1.10"
anyhow = "1.0"